erDiagram
    TYPE_DOC {
        int Id_tipo_doc
        varchar Nombre
    }
    ESTADO {
        int Id_estado
        varchar Nombre
        text Descripcion
        date Fecha
    }
    AERONAVE {
        int Id_aeronave
        varchar Nombre
    }
    PASAJERO {
        int Id_pasajero
        int Id_tipo_doc_fk
        varchar Nombre
        varchar Apellido
        varchar Documento
        varchar Telefono
        varchar Email
    }
    VUELO {
        int Id_vuelo
        int Id_estado_fk
        int Id_aeronave_fk
        varchar Puerta
        datetime Hora_salida
        varchar Lugar_salida
        datetime Hora_llegada
        varchar Lugar_llegada
    }
    RESERVA {
        int Id_reserva
        int Id_vuelo_fk
        int Id_pasajero_fk
    }
    ASIENTO {
        int Id_asiento
        boolean Disponible
        decimal Pago
    }
    VENTA {
        int Id_venta
        int Id_reserva_fk
        int Id_asiento_fk
        decimal Monto
    }

    TYPE_DOC ||--o{ PASAJERO : "Id_tipo_doc_fk"
    ESTADO ||--o{ VUELO : "Id_estado_fk"
    AERONAVE ||--o{ VUELO : "Id_aeronave_fk"
    PASAJERO ||--|{ RESERVA : "Id_pasajero_fk"
    VUELO ||--|{ RESERVA : "Id_vuelo_fk"
    RESERVA ||--|{ VENTA : "Id_reserva_fk"
    ASIENTO ||--|{ VENTA : "Id_asiento_fk"